--- a/templates/webpack-vue/package.json
+++ b/templates/webpack-vue/package.json
@@ -20,6 +20,7 @@
   "author": "CC",
   "license": "ISC",
   "dependencies": {
+    "karma-es6-shim": "^0.2.3",
     "vue": "^1.0.17",
     "vue-router": "^0.7.11",
     "vue-touch": "^1.0.2",
@@ -33,6 +34,7 @@
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.3.0",
     "eslint-config-airbnb": "^6.1.0",
@@ -54,6 +56,10 @@
     "postcss": "^5.0.19",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.3.2",
+    "vue-html-loader": "^1.2.0",
+    "vue-loader": "^8.2.0",
+    "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
